// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text (isCI = false) > can cancel 1`] = `
[
  "[?25l",
  "│
◆  foo
│
│  Search: /tmp/█
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[6A",
  "[1B",
  "[J",
  "■  foo
│  /tmp/",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > renders cancelled value if one set 1`] = `
[
  "[?25l",
  "│
◆  foo
│
│  Search: /tmp/█
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  Search: /tmp/x█",
  "[3B",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  Search: /tmp/xy█",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "■  foo
│  /tmp/xy",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > can cancel 1`] = `
[
  "[?25l",
  "│
◆  foo
│
│  Search: /tmp/█
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[6A",
  "[1B",
  "[J",
  "■  foo
│  /tmp/",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > renders cancelled value if one set 1`] = `
[
  "[?25l",
  "│
◆  foo
│
│  Search: /tmp/█
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  Search: /tmp/x█",
  "[3B",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  Search: /tmp/xy█",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "■  foo
│  /tmp/xy",
  "
",
  "[?25h",
]
`;
